--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Curmin" parent="android:Theme.Material.Light.NoActionBar">
+    <style name="Theme.Curmin" parent="Theme.MaterialComponents.NoActionBar">
         <item name="android:statusBarColor">@color/background_color</item>
         <item name="android:navigationBarColor">@color/background_color</item>
         <item name="android:splashScreenTheme">@style/SplashScreenTheme</item>
+
+        <item name="materialCalendarTheme">@style/DatePickerDialogTheme</item>
     </style>
 
     <style name="SplashScreenTheme" parent="Theme.Curmin">
@@ -12,4 +14,23 @@
         <item name="android:windowSplashScreenAnimatedIcon">@drawable/bg_splash</item>
         <item name="android:windowSplashScreenAnimationDuration">400</item>
     </style>
+
+    <style name="DatePickerDialogTheme" parent="ThemeOverlay.MaterialComponents.MaterialCalendar">
+        <item name="materialCalendarHeaderLayout">@style/DatePicker.HeaderLayout</item>
+        <item name="shapeAppearanceMediumComponent">@style/DatePicker.ShapeAppearance</item>
+        <item name="colorPrimary">@color/primary_color</item>
+        <item name="colorOnPrimary">@color/on_background_color</item>
+        <item name="colorSurface">@color/surface_color</item>
+        <item name="colorOnSurface">@color/on_surface_color</item>
+        <item name="android:textColorPrimary">@color/on_surface_color</item>
+    </style>
+
+    <style name="DatePicker.HeaderLayout" parent="Widget.MaterialComponents.MaterialCalendar.HeaderLayout">
+        <item name="android:background">@color/background_color</item>
+    </style>
+
+    <style name="DatePicker.ShapeAppearance" parent="ShapeAppearance.MaterialComponents.MediumComponent">
+        <item name="cornerSize">16dp</item>
+    </style>
+
 </resources>
